# MotionCaptureViewer

./: .gitignore  CMakeLists.txt  README.md
viewer/: CMakeLists.txt  main.cpp
viewer/include/: Motion.hpp  MotionFrame.hpp  MotionReader.hpp  Pose.hpp  Time.hpp  TrcReader.hpp
viewer/src/: CMakeLists.txt  Motion.cpp  MotionFrame.cpp  MotionReader.cpp  Pose.cpp  Time.cpp  TrcReader.cpp
