find_package(PkgConfig REQUIRED)
pkg_search_module(GLFW REQUIRED glfw3)
link_directories(${GLFW_BINARY_DIR}/src)
include_directories(../glfw/include)
add_executable(viewer main.cpp)
message(STATUS ${GLFW_BINARY_DIR})
IF(APPLE)
	target_link_libraries(viewer "-framework OpenGL")
	target_link_libraries(viewer "-framework Cocoa")
	target_link_libraries(viewer "-framework IOKit")
	target_link_libraries(viewer "-framework CoreVideo")
ENDIF(APPLE)
target_link_libraries(viewer glfw ${GLFW_LIBRARIES})
