add_executable(viewer ${VIEWER_SRC_FILE} ${VIEWER_INCLUDE_FILE})
IF(APPLE)
    target_link_libraries(viewer "-framework OpenGL")
    target_link_libraries(viewer "-framework Cocoa")
    target_link_libraries(viewer "-framework IOKit")
    target_link_libraries(viewer "-framework CoreVideo")
ENDIF(APPLE)
target_link_libraries(viewer glfw ${GLFW_LIBRARIES})
